--- a/examples/index.html
+++ b/examples/index.html
@@ -28,9 +28,13 @@
 	<body>
 		<div id="x"></div>
 		<div id="y"></div>
-		<div id="angle"></div>
+		<div id="z"></div>
+		<div id="angleX"></div>
+		<div id="angleY"></div>
+		<div id="angleZ"></div>
 		<div id="scaleX"></div>
 		<div id="scaleY"></div>
+		<div id="scaleZ"></div>
 	</script><script src="https://webglfundamentals.org/webgl/resources/jquery-1.7.1.min.js"></script>
 	<script src="https://webglfundamentals.org/webgl/resources/jquery-ui-1.8.16.custom.min.js"></script>
 	<script src="https://webglfundamentals.org/webgl/resources/jquery.mousecapture.js"></script>
